# pyhuffman

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/source/: conf.py  huffman.rst  index.rst
pyhuffman/: huffman.py
src/pyhuffman/: __init__.py  huffman.py  lzw.py
tests/: __init__.py  test_lzw.py  test_pyhuffman.py
