[tool.poetry]
name = "pyhuffman"
version = "0.1.0"
description = "A Huffman coding implementation for learning purposes using Python best-practices"
authors = ["Jb DOYON <jb@jiby.tech>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.4.4"
isort = "^4.3.21"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
