[tool.poetry]
name = "pyhuffman"
version = "0.1.0"
description = "A Huffman coding implementation for learning purposes using Python best-practices"
authors = ["Jb DOYON <jb@jiby.tech>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.761"
isort = "^4.3.21"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-pylint = "^0.1.1"
dlint = "^0.11.0"
darglint = "^1.8.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
